--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -33,7 +33,10 @@ $pink: #eb3264;
 
 
 // shadow
-$normal-shadow: #4c6651;
+$shade-shadow: #5e687949;
+$strong-inset-shadow: #3c423d;
+$base-shadow: #ffffff73;
+$inset-shadow: #7a7777;
 
 
 // bg
@@ -41,6 +44,8 @@ $list-bg: #f4f2f2;
 $background-color: #f7f4f4;
 $container-bg: #f0f0f0;
 
+$gray-border: #d6d4d4;
+$gray-font: #adabab;
 
 
 
