--- a/styles/mixins/_shadow.scss
+++ b/styles/mixins/_shadow.scss
@@ -1,14 +1,4 @@
-@mixin label-shadow($color) {
-  box-shadow: inset 1px 2px 0px 0px $color, inset -1px -1px 2px 0px #fff;
-}
 
-@mixin graph-shadow() {
-  box-shadow: inset -1px 2px 3px #7a7777, 0px 3px 2px 0px #dedbdb, inset 0px 3px 4px 0px #d1d1d1;
-}
-
-@mixin graph-bar($color) {
-  box-shadow: 1px 2px 0px 0px $color, inset -1px -1px 2px 0px #fff;
-}
 
 @mixin card-inner-shadow() {
   box-shadow: inset 7px 10px 15px 0px #d3cdcd, 1px 2px 0px 0px #fffefe, inset 0px 1px 10px 8px #fff;
@@ -16,4 +6,51 @@
 
 @mixin card-normal-shadow() {
   box-shadow: 12px 11px 11px 5px #e1e4e6, -8px -8px 7px 0px #f6f6f6;
+}
+
+@mixin container-shadow() {
+  box-shadow: inset -2px -1px 7px #c7c6c68f, inset 1px 4px 5px $shade-shadow;
+}
+
+@mixin label-shadow() {
+  box-shadow: inset 1px 2px 0px 0px $strong-inset-shadow, inset -1px -1px 2px 0px #fff;
+}
+
+@mixin graph-shadow() {
+  box-shadow: inset -1px 2px 3px $inset-shadow, 0px 3px 2px 0px $base-shadow, inset 0px 3px 4px 0px #d1d1d1;
+}
+
+@mixin graph-bar() {
+  box-shadow: 1px 2px 0px 0px $shade-shadow, inset -1px -1px 2px 0px #fff;
+}
+
+
+@mixin sm-box-shadow() {
+  box-shadow: -3px -3px 7px $base-shadow,
+  3px 3px 5px $shade-shadow;
+}
+
+@mixin sm-box-inner-shadow() {
+  box-shadow: inset -2px -1px 7px $base-shadow, inset 1px 4px 5px $shade-shadow;
+}
+
+
+@mixin btn-shadow() {
+  box-shadow: -3px -3px 7px $base-shadow,
+  3px 3px 5px $shade-shadow;
+}
+
+@mixin btn-hover-shadow() {
+  box-shadow: -3px -3px 7px $base-shadow,
+  3px 3px 8px 0px #213e62;
+}
+
+@mixin label($label-name) {
+  background-color: $label-name;
+  @include label-shadow();
+}
+
+@mixin bar($bg-color) {
+  background-color: $bg-color;
+  @include graph-bar();
 }
