--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -5,7 +5,7 @@
   padding: 20px;
 
   .search-section {
-    margin: 44px 0;
+    margin: 30px 0 20px;
 
     .search-bar {
       position: relative;
@@ -43,57 +43,134 @@
   }
 
 
+  .filter-section {
+    width: 100%;
+    margin: 0 0 55px;
 
-  .filter {
-    input[type="checkbox"] {
-      display: none;
-    }
+    .option {
+      width: 50%;
+      display: flex;
+      justify-content: space-around;
+      margin: 0 auto;
 
-    .filter-label {
-      position: absolute;
-      top: 334px;
-      right: 38px;
-      padding: 5px 20px;
-      border: 1px solid black;
-      border-radius: 10px;
-    }
-
-    .scroll-wrapper {
-      visibility: hidden;
-      position: absolute;
-      top: 380px;
-      right: 20px;
-      background: #fff;
-      width: 0;
-      height: 0;
-      z-index: 1;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 2px 2px 5px grey;
-      overflow: hidden;
-      transition: all 0.3s ease;
-    }
-
-
-    .type-list {
-      width: 220px;
-      height: 300px;
-      overflow-y: scroll;
 
       li {
-        padding: 5px;
-      }
+        cursor: pointer;
+        padding: 5px 20px;
+        border-radius: 10px;
+        position: relative;
 
-      input[type="radio"] {
-        display: none;
-      }
+      
+        &.active {
+          color: $dragon-label;
+          font-weight: bold;
+          @include sm-box-shadow();
+        }
 
+        &:hover {
+          color: $dragon-label;
+        }
+      }
     }
 
-    .filter-btn:checked ~ .scroll-wrapper {
+    .category-container {
       visibility: visible;
-      width: 220px;
-      height: 287px;
+      position: relative;
+      width: 53%;
+      height: 100%;
+      margin: 0 auto;
+      background: #e8e8e8;
+      @include card-normal-shadow();
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 0px;
+        height: 0px;
+        border-bottom: 20px solid #e8e8e8;
+        border-left: 15px solid transparent;
+        border-right: 17px solid transparent;
+        left: 300px;
+        top: -19px;
+      }
+
+      .category-list {
+        display: flex;
+        width: 100%;
+        padding: 20px;
+        margin: 20px 0 0;
+        text-align: center;
+        transition: all 0.3s ease;
+
+        li {
+          width: 50%;
+          margin: 0 10px 0 0;
+          cursor: pointer;
+
+          &:nth-last-child(1) {
+            margin: 0;
+          }
+
+          p {
+            width: 90%;
+            padding: 0 0 5px;
+            border-bottom: 1px solid $shadow-label;
+          }
+        }
+  
+        .item {
+          float: left;
+          margin: 5px 10px;
+          border: 1px solid $shadow-label;
+          border-radius: 5px;
+          padding: 5px 10px;
+          width: 43%;
+          margin: 10px;
+
+
+          &:hover {
+            border: 1px solid $dragon-label;
+            color: $dragon-label;
+          }
+        }
+
+        .type-list {
+          .item {
+            width: 20%;
+            margin: 10px 5px;
+
+            label {
+              cursor: pointer;
+            }
+          }
+        }
+      }
+
+      .filter-btn {
+        width: 100%;
+        text-align: center;
+        padding: 0 0 20px;
+
+        button {
+          @include btn-shadow();
+
+          padding: 10px 20px;
+          background-color: $dragon-label;
+          color: #fff;
+          border-radius: 5px;
+
+          &:hover {
+            @include btn-hover-shadow();
+          }
+        }
+      }
+    }
+
+    .hidden {
+      visibility: hidden;
+      width: 53%;
+
+      height: 0;
     }
   }
 
