--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -7,7 +7,7 @@ $ground-label: #e0c068;
 $rock-label: #9e863d;
 $bug-label: #88960e;
 $ghost-label: #5d73d4;
-$steel-label: #5d73d4;
+$steel-label: #abaebb;
 $fire-label: #d56262;
 $water-label: #65aae3;
 $grass-label: #88ba88;
