--- a/styles/detail.module.scss
+++ b/styles/detail.module.scss
@@ -215,7 +215,7 @@
           }
 
           .defense-bar {
-            @include bar($grass-label);
+            @include bar(#2196f3);
           }
         }
       }
