--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -6,13 +6,152 @@
 
   .search-section {
     margin: 30px 0 20px;
+    text-align: center;
 
+    .filter-section {
+      width: 0;
+      height: 0;
+      visibility: hidden;
+      position: absolute;
+      z-index: 1;
+      left: 0;
+      top: 47px;
+
+      .option {
+        @include input-shadow();
+        min-width: 311px;
+        background-color: #f4f4f4;
+        border-radius: 10px;
+
+        .category {
+          padding: 5px 10px;
+          text-align: left;
+
+          &:nth-child(1) {
+            padding: 10px 10px 0;
+          }
+
+          &:nth-last-child(1) {
+            padding: 20px 10px;
+          }
+
+          .category-title {
+            display: flex;
+            padding: 2px 10px;
+            margin: 0 0 5px;
+            background: #c69b9bbd;
+
+            span {
+              padding: 2px 5px;
+            }
+          }
+
+          .option-list {
+            display: flex;
+            flex-wrap: wrap;
+            width: 300px;
+
+            .item {
+              width: 141px;
+              margin: 2px;
+
+              label {
+                display: inline-block;
+                text-align: center;
+                width: 100%;
+                padding: 5px 0;
+                border: 1px solid $shadow-label;
+                border-radius: 5px;
+                cursor: pointer;
+
+                &:hover {
+                  @include sm-box-shadow();
+                  border: 1px solid $dragon-label;
+                  color: $dragon-label;
+                }
+              }
+
+              input[type="checkbox"]:checked ~ label{
+                @include sm-box-shadow();
+                border: 1px solid $dragon-label;
+                background-color: #64b4c8;
+                color: white;
+              }
+            }
+          }
+
+          .filter-btn {
+            text-align: center;
+            button {
+              @include input-shadow;
+              padding: 10px 20px;
+              border-radius: 20px;
+
+              &:hover {
+                @include card-normal-shadow();
+              }
+
+              &:nth-child(1) {
+                @include sm-box-shadow();
+
+                background-color: $dragon-label;
+                margin: 0 10px 0 0;
+
+                &:hover {
+                  @include btn-hover-shadow();
+                }
+              }
+            }
+
+          }
+        }
+      }
+    }
+
+    .filter {
+      position: relative;
+      display: inline-block;
+      margin: 0 0 0 10px;
+      cursor: pointer;
+
+      .filter-icon-label {
+        @include input-shadow();
+        display: inline-block;
+        border-radius: 10px;
+        padding: 6px 20px;
+        cursor: pointer;
+
+        .filter-arrow {
+          font-size: 13px;
+          margin: 0 0 0 4px;
+          transition: all 0.3s ease;
+        }
+
+      }
+
+      .filter-icon:checked ~ .filter-icon-label, .filter-icon-label:hover {
+        color: $pink;
+      }
+
+      .filter-icon:checked ~ .filter-icon-label {
+        .filter-arrow {
+          transform: rotateX(180deg);
+        }
+      }
+
+      .filter-icon:checked ~ .filter-section {
+        visibility: visible;
+        width: 100%;
+      }
+
+    }
     .search-bar {
       position: relative;
+      display: inline-block;
       width: 40%;
       margin: 0 auto;
-      border: 1px solid #7f7a7a;
       border-radius: 20px;
+      @include input-shadow();
 
       input {
         width: 100%;
@@ -40,157 +179,14 @@
         }
       }
     }
-  }
 
-
-  .filter-section {
-    width: 100%;
-    margin: 0 0 55px;
-
-    .option {
-      width: 50%;
-      display: flex;
-      justify-content: space-around;
-      margin: 0 auto;
-
-
-      li {
-        cursor: pointer;
-        padding: 5px 20px;
-        border-radius: 10px;
-        position: relative;
-
-      
-        &.active {
-          color: $dragon-label;
-          font-weight: bold;
-          @include sm-box-shadow();
-        }
-
-        &:hover {
-          color: $dragon-label;
-        }
-      }
-    }
-
-    .category-container {
-      visibility: visible;
-      position: relative;
-      width: 53%;
-      height: 100%;
-      margin: 0 auto;
-      background: #e8e8e8;
-      @include card-normal-shadow();
-
-      &::after {
-        content: '';
-        position: absolute;
-        width: 0px;
-        height: 0px;
-        border-bottom: 20px solid #e8e8e8;
-        border-left: 15px solid transparent;
-        border-right: 17px solid transparent;
-        left: 300px;
-        top: -19px;
-      }
-
-      .category-list {
-        display: flex;
-        width: 100%;
-        padding: 20px;
-        margin: 20px 0 0;
-        text-align: center;
-        transition: all 0.3s ease;
-
-        li {
-          width: 50%;
-          margin: 0 10px 0 0;
-          cursor: pointer;
-
-          &:nth-last-child(1) {
-            margin: 0;
-          }
-
-          p {
-            width: 90%;
-            padding: 0 0 5px;
-            border-bottom: 1px solid $shadow-label;
-          }
-        }
-
-        .option-list {
-          .item {
-            float: left;
-            width: 20%;
-
-            &:nth-child(n+2) {
-              margin: 10px 10px 10px 0;
-            }
-
-            &:nth-child(n+1) {
-              margin: 10px 0 10px 10px;
-            }
-
-            label {
-              display: inline-block;
-              width: 77px;
-              height: 29px;
-              line-height: 1.7;
-              border: 1px solid $shadow-label;
-              border-radius: 5px;
-              cursor: pointer;
-    
-              &:hover {
-                @include sm-box-shadow();
-              }
-            }
-          }
-
-          &:nth-child(2) {
-            .item {
-              width: 44%;
-              label {
-                width: 128px;
-              }
-            }
-          }
-
-          
-          input[type="checkbox"]:checked ~ label{
-            @include sm-box-shadow();
-            border: 1px solid $dragon-label;
-            color: $dragon-label;
-          }
-
-        }
-      }
-
-      .filter-btn {
-        width: 100%;
-        text-align: center;
-        padding: 0 0 20px;
-
-        button {
-          @include btn-shadow();
-
-          padding: 10px 20px;
-          background-color: $dragon-label;
-          color: #fff;
-          border-radius: 5px;
-
-          &:hover {
-            @include btn-hover-shadow();
-          }
-        }
-      }
-    }
-
-    .hidden {
-      visibility: hidden;
-      width: 53%;
-      height: 0;
+    .filter-label {
+      margin: 0 0 30px;
     }
   }
+
+
+  
 
   .no-result {
     text-align: center;
