--- a/styles/mixins/_shadow.scss
+++ b/styles/mixins/_shadow.scss
@@ -16,12 +16,19 @@
   box-shadow: inset 1px 2px 0px 0px $strong-inset-shadow, inset -1px -1px 2px 0px #fff;
 }
 
+@mixin input-shadow() {
+  box-shadow: 4px 5px 20px rgb(0 0 0 / 10%), -2px -1px 20px #fff, inset -5px -5px 5px rgb(255 255 255 / 50%), inset 5px 5px 5px rgb(0 0 0 / 5%);
+}
+
 @mixin graph-shadow() {
-  box-shadow: inset -1px 2px 3px $inset-shadow, 0px 3px 2px 0px $base-shadow, inset 0px 3px 4px 0px #d1d1d1;
+  // box-shadow: inset -1px 2px 3px $inset-shadow, 0px 3px 2px 0px $base-shadow, inset 0px 3px 4px 0px #d1d1d1;
+  box-shadow: 15px 15px 20px rgb(0 0 0 / 10%), -2px -1px 20px #fff, inset -5px -5px 5px rgb(255 255 255 / 50%), inset 5px 5px 5px rgb(0 0 0 / 5%);
 }
 
 @mixin graph-bar() {
-  box-shadow: 1px 2px 0px 0px $shade-shadow, inset -1px -1px 2px 0px #fff;
+  box-shadow: 6px 7px 20px rgb(0 0 0 / 10%), -2px -1px 20px #fff, inset -1px -2px 0px rgb(255 255 255 / 50%), inset 5px 5px 5px rgb(0 0 0 / 5%)
+  // box-shadow: inset -5px -5px 5px rgba(0,0,0,0.2), 
+  // 0 420px 0 400px #2196f3;
 }
 
 
