--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -8,143 +8,7 @@
     margin: 30px 0 20px;
     text-align: center;
 
-    .filter-section {
-      width: 0;
-      height: 0;
-      visibility: hidden;
-      position: absolute;
-      z-index: 1;
-      left: 0;
-      top: 47px;
-
-      .option {
-        @include input-shadow();
-        min-width: 311px;
-        background-color: #f4f4f4;
-        border-radius: 10px;
-
-        .category {
-          padding: 5px 10px;
-          text-align: left;
-
-          &:nth-child(1) {
-            padding: 10px 10px 0;
-          }
-
-          &:nth-last-child(1) {
-            padding: 20px 10px;
-          }
-
-          .category-title {
-            display: flex;
-            padding: 2px 10px;
-            margin: 0 0 5px;
-            background: #c69b9bbd;
-
-            span {
-              padding: 2px 5px;
-            }
-          }
-
-          .option-list {
-            display: flex;
-            flex-wrap: wrap;
-            width: 300px;
-
-            .item {
-              width: 141px;
-              margin: 2px;
-
-              label {
-                display: inline-block;
-                text-align: center;
-                width: 100%;
-                padding: 5px 0;
-                border: 1px solid $shadow-label;
-                border-radius: 5px;
-                cursor: pointer;
-
-                &:hover {
-                  @include sm-box-shadow();
-                  border: 1px solid $dragon-label;
-                  color: $dragon-label;
-                }
-              }
-
-              input[type="checkbox"]:checked ~ label{
-                @include sm-box-shadow();
-                border: 1px solid $dragon-label;
-                background-color: #64b4c8;
-                color: white;
-              }
-            }
-          }
-
-          .filter-btn {
-            text-align: center;
-            button {
-              @include input-shadow;
-              padding: 10px 20px;
-              border-radius: 20px;
-
-              &:hover {
-                @include card-normal-shadow();
-              }
-
-              &:nth-child(1) {
-                @include sm-box-shadow();
-
-                background-color: $dragon-label;
-                margin: 0 10px 0 0;
-
-                &:hover {
-                  @include btn-hover-shadow();
-                }
-              }
-            }
-
-          }
-        }
-      }
-    }
-
-    .filter {
-      position: relative;
-      display: inline-block;
-      margin: 0 0 0 10px;
-      cursor: pointer;
-
-      .filter-icon-label {
-        @include input-shadow();
-        display: inline-block;
-        border-radius: 10px;
-        padding: 6px 20px;
-        cursor: pointer;
-
-        .filter-arrow {
-          font-size: 13px;
-          margin: 0 0 0 4px;
-          transition: all 0.3s ease;
-        }
-
-      }
-
-      .filter-icon:checked ~ .filter-icon-label, .filter-icon-label:hover {
-        color: $pink;
-      }
-
-      .filter-icon:checked ~ .filter-icon-label {
-        .filter-arrow {
-          transform: rotateX(180deg);
-        }
-      }
-
-      .filter-icon:checked ~ .filter-section {
-        visibility: visible;
-        width: 100%;
-      }
-
-    }
+    
     .search-bar {
       position: relative;
       display: inline-block;
@@ -185,8 +49,158 @@
     }
   }
 
+  .filter-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
 
+    .count {
+      p {
+        display: inline-block;
+        font-size: 29px;
+      }
+      span {
+        color: $pink;
+        margin: 0 0 0 10px;
+      }
+    }
+
+    .filter-section {
+      width: 100%;
+      visibility: hidden;
+      position: absolute;
+      z-index: 1;
+      right: 204px;
+      top: 47px;
   
+      .option {
+        @include input-shadow();
+        min-width: 311px;
+        background-color: #f4f4f4;
+        border-radius: 10px;
+  
+        .category {
+          padding: 5px 10px;
+          text-align: left;
+  
+          &:nth-child(1) {
+            padding: 10px 10px 0;
+          }
+  
+          &:nth-last-child(1) {
+            padding: 20px 10px;
+          }
+  
+          .category-title {
+            display: flex;
+            padding: 2px 10px;
+            margin: 0 0 5px;
+            background: #c69b9bbd;
+  
+            span {
+              padding: 2px 5px;
+            }
+          }
+  
+          .option-list {
+            display: flex;
+            flex-wrap: wrap;
+            width: 300px;
+  
+            .item {
+              width: 141px;
+              margin: 2px;
+  
+              label {
+                display: inline-block;
+                text-align: center;
+                width: 100%;
+                padding: 5px 0;
+                border: 1px solid $shadow-label;
+                border-radius: 5px;
+                cursor: pointer;
+  
+                &:hover {
+                  @include sm-box-shadow();
+                  border: 1px solid $dragon-label;
+                  color: $dragon-label;
+                }
+              }
+  
+              input[type="checkbox"]:checked ~ label{
+                @include sm-box-shadow();
+                border: 1px solid $dragon-label;
+                background-color: #64b4c8;
+                color: white;
+              }
+            }
+          }
+  
+          .filter-btn {
+            text-align: center;
+            button {
+              @include input-shadow;
+              padding: 10px 20px;
+              border-radius: 20px;
+  
+              &:hover {
+                @include card-normal-shadow();
+              }
+  
+              &:nth-child(1) {
+                @include sm-box-shadow();
+  
+                background-color: $dragon-label;
+                margin: 0 10px 0 0;
+  
+                &:hover {
+                  @include btn-hover-shadow();
+                }
+              }
+            }
+  
+          }
+        }
+      }
+    }
+  
+    .filter {
+      position: relative;
+      display: inline-block;
+      margin: 0 0 0 10px;
+      cursor: pointer;
+  
+      .filter-icon-label {
+        @include input-shadow();
+        display: inline-block;
+        border-radius: 10px;
+        padding: 6px 20px;
+        cursor: pointer;
+  
+        .filter-arrow {
+          font-size: 13px;
+          margin: 0 0 0 4px;
+          transition: all 0.3s ease;
+        }
+  
+      }
+  
+      .filter-icon:checked ~ .filter-icon-label, .filter-icon-label:hover {
+        color: $pink;
+      }
+  
+      .filter-icon:checked ~ .filter-icon-label {
+        .filter-arrow {
+          transform: rotateX(180deg);
+        }
+      }
+  
+      .filter-icon:checked ~ .filter-section {
+        visibility: visible;
+      }
+    }
+  }
+
 
   .no-result {
     text-align: center;
