--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -1,5 +1,6 @@
 @import './variables/colors';
 @import './mixins/shadow';
+@import './mixins/media';
 
 .main {
   padding: 20px;
@@ -10,17 +11,22 @@
 
     
     .search-bar {
+      @include input-shadow();
+      @include respond-to(mobile) {
+        width: 100%;
+      }
+
       position: relative;
       display: inline-block;
       width: 40%;
       margin: 0 auto;
       border-radius: 20px;
-      @include input-shadow();
+      transition: all 0.3s ease;
 
       input {
         width: 100%;
         height: 100%;
-        padding: 13px 48px;
+        padding: 13px 43px;
         background-color: transparent;
       }
 
@@ -63,24 +69,7 @@
         color: $pink;
         margin: 0 0 0 10px;
       }
-
-      .filter-condition-list {
-        display: inline-block;
-        margin: 0 0 0 20px;
-
-        span {
-          @include sm-box-shadow();
-          padding: 2px 10px;
-          border-radius: 10px;
-          border: 1px solid $dragon-label;
-          font-size: 14px;
-          color: $strong-inset-shadow;
-          cursor: default;
-        }
-      }
     }
-
-
 
 
     .filter-section {
@@ -230,6 +219,26 @@
     }
   }
 
+  .filter-condition-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px 20px;
+
+    span {
+      @include sm-box-shadow();
+      padding: 2px 10px;
+      margin: 12px 5px 0 0;
+      border-radius: 10px;
+      border: 1px solid $dragon-label;
+      font-size: 14px;
+      color: $strong-inset-shadow;
+      cursor: default;
+
+      &:nth-last-child(1) {
+        margin: 12px 0 0;
+      }
+    }
+  }
 
   .no-result {
     text-align: center;
@@ -238,7 +247,6 @@
   .pokemon-list {
     width: 100%;
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
     border-radius: 5px;
 
