상세화면 반응형

--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -25,7 +25,7 @@ $dark-label: #00000096;
 
 
 // color 
-$orange: orange;
+$orange: #ff8800;
 $yellow: #ebeb32;
 $blue: #0070f3;
 $book-color: #b72f2f;
