--- a/styles/detail.module.scss
+++ b/styles/detail.module.scss
@@ -1,20 +1,36 @@
 @import './variables/colors';
 @import './mixins/shadow';
 @import './mixins/tooltip';
+@import './mixins/media';
 
 .detail {
   padding: 0 0 30px;
+
+
 
   .container {
     display: flex;
     align-items: center;
     height: 100%;
     padding: 20px 50px;
+    transition: all 0.3s ease;
+
+    @include respond-to(wide) {
+      display: block;
+    }
+
+    @include respond-to(sm) {
+      padding: 20px 0;
+    }
   }
 
   .image-section {
     width: 50%;
     padding: 0 20px;
+
+    @include respond-to(wide) {
+      width: 100%;
+    }
   
     .profile {
       margin: 0 0 20px;
@@ -31,6 +47,11 @@
 
     .profile-image {
       text-align: center;
+
+      @include respond-to(mobile) {
+        width: 63%;
+        margin: 0 auto;
+      }
     }
   }
 
@@ -38,6 +59,9 @@
     width: 50%;
     padding: 20px;
 
+    @include respond-to(wide) {
+      width: 100%;
+    }
     .section {
       margin: 0 0 20px;
     }
@@ -51,7 +75,6 @@
         flex-direction: row;
         flex-wrap: wrap;
         width: 100%;
-        min-width: 500px;
         text-align: center;
 
         li {
@@ -59,6 +82,10 @@
           padding: 10px;
           border: 1px solid $gray-border;
           border-right: none;
+
+          @include respond-to(mobile) {
+            width: 50%;
+          }
 
           .category-title {
             font-size: 13px;
@@ -68,6 +95,10 @@
           .info-text-area {
             display: flex;
             justify-content: space-around;
+
+            @include respond-to(pad) {
+              font-size: 13px;
+            }
 
             .label {
               width: 48px;
@@ -102,6 +133,13 @@
 
           &:nth-last-child(1) {
             border-bottom: 1px solid $gray-border;
+          }
+          
+
+          @include respond-to(pad) {
+            .ability-desc, .ability-name {
+              font-size: 13px;
+            }
           }
 
           .ability-desc {
@@ -144,6 +182,15 @@
 
           .category-title {
             margin: 10px 0;
+          }
+
+          @include respond-to(mobile) {
+            width: 50%;
+            padding: 0 0 10px;
+
+            &:nth-child(1) {
+              width: 100%;
+            }
           }
         }
       }
@@ -190,20 +237,16 @@
             transition: all 1s ease;
           }
 
-          .happiness-bar {
+          .speed-bar {
             @include bar($pink);
           }
 
-          .speed-bar {
-            @include bar($water-label);
-          }
-
           .special-defense-bar {
-            @include bar($ghost-label);
+            @include bar($grass-label);
           }
 
           .special-attack-bar {
-            @include bar($electric-label);
+            @include bar($flying-label);
           }
 
           .hp-bar {
@@ -211,11 +254,11 @@
           }
 
           .attack-bar {
-            @include bar($fighting-label);
+            @include bar($orange);
           }
 
           .defense-bar {
-            @include bar(#2196f3);
+            @include bar($yellow);
           }
         }
       }
@@ -236,8 +279,16 @@
   .desc {
     margin: 10px 0 20px;
 
+    @include respond-to(pad) {
+      font-size: 13px;
+
+      .version-tab {
+        font-size: 13px;
+      }
+    }
     .version-tab {
       display: flex;
+      flex-wrap: wrap;
 
       li {
         @include sm-box-shadow();
