--- a/styles/detail.module.scss
+++ b/styles/detail.module.scss
@@ -101,10 +101,9 @@
             }
 
             .label {
-              width: 48px;
               border-radius: 4px;
               font-size: 14px;
-              padding: 2px;
+              padding: 2px 7px;
               cursor: pointer;
             }
 
@@ -177,7 +176,7 @@
     .default-info {
       ul {
         li {
-          width: 20%;
+          // width: 20%;
           padding: 0;
 
           .category-title {
