--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,3 +51,22 @@ a {
 input[type="checkbox"], input[type="radio"]  {
   display: none;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #b1b1b1;
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #a7a6a6;
+}
