--- a/styles/detail.module.scss
+++ b/styles/detail.module.scss
@@ -189,70 +189,8 @@
 
     
 
-    .rate {
-      @include container-shadow();
-      padding: 10px 20px;
-
-      .graph-section {
-        display: flex;
-        align-items: center;
-
-        p {
-          display: inline-block;
-          width: 90px;
-          line-height: 1.7;
-          text-align: center;
-        }
-
-        .graph-label {
-          width: 120px;
-          text-align: left;
-
-        }
-        .graph {
-          @include graph-shadow();
-          position: relative;
-          display: inline-block;
-          width: 80%;
-          margin: 0 10px;
-          padding: 10px;
-          border-radius: 10px;
-
-          .graph-bar {
-            position: absolute;
-            left: 0;
-            top: 0;
-            padding: 10px;
-            border-radius: 10px;
-            width: 0;
-            transition: all 1s ease;
-          }
-
-          .speed-bar {
-            @include bar($pink);
-          }
-
-          .special-defense-bar {
-            @include bar($grass-label);
-          }
-
-          .special-attack-bar {
-            @include bar($flying-label);
-          }
-
-          .hp-bar {
-            @include bar($fire-label);
-          }
-
-          .attack-bar {
-            @include bar($orange);
-          }
-
-          .defense-bar {
-            @include bar($yellow);
-          }
-        }
-      }
+    .chart-section {
+      width: 400px;
     }
 
     .category {
