--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,6 @@
 
 @import './variables/colors';
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400&display=swap');
 
 html,
 body {
@@ -8,8 +9,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: $background-color;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Rajdhani', sans-serif;
 }
 
 * {
