--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -57,6 +57,9 @@
     justify-content: space-between;
     padding: 0 20px;
 
+    @include respond-to(mobile) {
+      margin: 38px 0 0;
+    }
     .count {
       p {
         display: inline-block;
@@ -100,13 +103,16 @@
     .filter {
       position: relative;
       display: inline-block;
+      top: -11px;
       margin: 0 0 0 10px;
       cursor: pointer;
   
       p {
         font-size: 13px;
         font-weight: bold;
+        margin: 0 0 3px;
       }
+
       .filter-icon-label {
         @include input-shadow();
         display: inline-block;
@@ -161,12 +167,14 @@
 
   .no-result {
     text-align: center;
+    margin: 113px 0px 0;
   }
 
   .pokemon-list {
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: 1fr;
     border-radius: 5px;
 
     li {
@@ -187,8 +195,18 @@
     }
   }
 
-  .loading {
+  .loader {
+    margin: 20px 0;
     width: 100%;
-    text-align: center;
+
+    p {
+      @include card-normal-shadow();
+      width: 50%;
+      margin: 20px auto;
+      padding: 20px;
+      font-size: 20px;
+      text-align: center;
+      background-color: $container-bg;
+    }
   }
 }
