--- a/styles/nav.module.scss
+++ b/styles/nav.module.scss
@@ -1,5 +1,6 @@
 
 @import "./mixins/shadow";
+@import "./mixins/media";
 @import "./variables/colors";
 
 .nav {
@@ -12,6 +13,11 @@
     .logo {
       margin:  0 0 0 156px;
       font-size: 50px;
+    
+      @include respond-to(mobile) {
+        display: block;
+        margin: 46px 0 0;
+      }
     }
 
     .desc{
