--- a/styles/detail.module.scss
+++ b/styles/detail.module.scss
@@ -7,10 +7,11 @@
   padding: 0 0 30px;
 
 
+  section {
+    float: right;
+  }
 
   .container {
-    display: flex;
-    align-items: center;
     height: 100%;
     padding: 20px 50px;
     transition: all 0.3s ease;
@@ -25,11 +26,13 @@
   }
 
   .image-section {
-    width: 50%;
-    padding: 0 20px;
+    position: fixed;
+    width: 42%;
 
     @include respond-to(wide) {
       width: 100%;
+      position: relative;
+
     }
   
     .profile {
@@ -46,7 +49,8 @@
     }
 
     .profile-image {
-      text-align: center;
+      width: 300px;
+      margin: 0 auto;
 
       @include respond-to(mobile) {
         width: 63%;
@@ -85,6 +89,10 @@
 
           @include respond-to(mobile) {
             width: 50%;
+
+            &:nth-child(1), &:nth-child(2) {
+              border-bottom: none;
+            }
           }
 
           .category-title {
@@ -146,7 +154,7 @@
             border-right: 1px solid $gray-border;
 
             .tool-tip {
-              @include tooltip (28px, -2px, -6px, 7px, 10px, 14px);
+              @include tooltip (28px, -2px, -6px, 7px);
             }
 
             span {
@@ -176,21 +184,34 @@
           }
 
           @include respond-to(mobile) {
-            width: 50%;
+            width: 33.33%;
             padding: 0 0 10px;
 
             &:nth-child(1) {
               width: 100%;
+              border-bottom: none;
             }
           }
         }
       }
     }
 
+    .total {
+      font-weight: bold;
+      float: right;
+      line-height: 1.5;
+
+      span {
+        &:nth-last-child(1) {
+          color: $fighting-label;
+        }
+      }
+    }
     
 
     .chart-section {
       width: 400px;
+      margin: 0 auto;
     }
 
     .category {
@@ -209,6 +230,7 @@
     margin: 10px 0 20px;
     position: relative;
     text-align: right;
+
     @include respond-to(pad) {
       font-size: 13px;
 
@@ -218,10 +240,11 @@
     }
 
     .selected-version {
-      @include input-shadow();
+      @include btn-hover-shadow();
       display: inline-block;
-      border-radius: 10px;
       padding: 6px 20px;
+      border-radius: 10px;
+      border: 1px solid $gray-border;
       color: $pink;
       cursor: pointer;
 
@@ -229,6 +252,10 @@
         font-size: 13px;
         margin: 0 0 0 14px;
         transition: all 0.3s ease;
+      }
+
+      &:hover {
+        @include input-shadow();
       }
     }
   
@@ -282,6 +309,9 @@
     .evolution-image {
       display: flex;
       margin: 16px 0 0;
+      padding: 0 14px;
+
+
       
       li {
         width: 100%;
@@ -299,16 +329,24 @@
           position: relative;
           width: 100px;
           height: 100px;
+          border: 1px solid #b4b0b0;
+          border-radius: 8px;
           text-align: center;
           background-color: $container-bg;
+          transition: all 0.3s ease;
           cursor: pointer;
 
           &:hover {
             @include sm-box-inner-shadow();
           }
 
+          @include respond-to(mobile) {
+            width: 80px;
+            height: 80px;
+          }
+
           .tool-tip {
-            @include tooltip (83px, 16px, -5px, 22px, 6px, 13px);
+            @include tooltip (83px, 16px, -5px, 22px);
           }
 
           &:hover .tool-tip {
@@ -320,8 +358,9 @@
   }
 
 
-  .btn-section {
+  .btn-section, .back-btn {
     text-align: center;
+    display: none;
 
     .btn {
       @include btn-hover-shadow();
@@ -336,5 +375,39 @@
       }
     }
 
+    @include respond-to(wide) {
+      display: block;
+    }
+
+  }
+
+
+  .back-btn {
+    position: absolute;
+    display: block;
+    text-align: left;
+    top: -50px;
+    left: -10px;
+
+    @include respond-to(wide) {
+      display: none;
+    }
+
+    .btn {
+      @include btn-hover-shadow();
+
+      border: 1px solid $pink;
+      padding: 5px 10px;
+      background-color: $container-bg;
+      border-radius: 20px;
+
+      &:hover {
+        @include input-shadow();
+      }
+
+      .back-btn-icon {
+        margin: 0 5px 0 0;
+      }
+    }
   }
 }
