--- a/styles/pokemon-card.module.scss
+++ b/styles/pokemon-card.module.scss
@@ -5,7 +5,7 @@
     &:nth-child(1) {
       margin: 0;
       border-radius: 10px;
-      padding: 2px 10px;
+      padding: 4px 10px 2px;
       font-size: 13px;
     }
   }
