--- a/styles/nav.module.scss
+++ b/styles/nav.module.scss
@@ -5,13 +5,11 @@
 
 .nav {
   padding: 20px;
-  // box-shadow: 6px 4px 14px #d9d9d8;
 
   .intro {
     text-align: center;
 
     .logo {
-      margin:  0 0 0 156px;
       font-size: 50px;
     
       @include respond-to(mobile) {
@@ -35,10 +33,14 @@
       @include btn-hover-shadow();
       border: 1px solid $gray-border;
       border-radius: 9px;
-      float: right;
+      position: absolute;
       display: flex;
       justify-content: flex-end;
-      padding: 5px 10px;
+      padding: 5px;
+      cursor: pointer;
+      top: -10px;
+      right: 0;
+      font-size: 13px;
       cursor: pointer;
 
       span {
@@ -51,21 +53,22 @@
       }
 
       .drop-down-icon {
-        margin: 5px 0 0 20px;
+        margin: 3px 0 0 7px;
         font-size: 13px;
         transition: all 0.5s ease;
       }
     }
 
     ul {
-      @include sm-box-shadow();
+      @include btn-hover-shadow();
       visibility:hidden;
       position: absolute;
       right: 20px;
-      top: 50px;
+      top: 29px;
       padding: 0 10px;
       transition: all 0.3s ease;
-
+      border: 1px solid $gray-border;
+      border-radius: 10px;
       
       li {
         padding: 5px 10px;
