--- a/styles/nav.module.scss
+++ b/styles/nav.module.scss
@@ -69,6 +69,7 @@
       transition: all 0.3s ease;
       border: 1px solid $gray-border;
       border-radius: 10px;
+      background-color: #f8f6f6;
       
       li {
         padding: 5px 10px;
