--- a/styles/nav.module.scss
+++ b/styles/nav.module.scss
@@ -31,15 +31,14 @@
 
     .selected-lang {
       @include btn-hover-shadow();
-      border: 1px solid $gray-border;
-      border-radius: 9px;
       position: absolute;
+      top: -10px;
+      right: 0;
       display: flex;
       justify-content: flex-end;
       padding: 5px;
-      cursor: pointer;
-      top: -10px;
-      right: 0;
+      border: 1px solid $gray-border;
+      border-radius: 9px;
       font-size: 13px;
       cursor: pointer;
 
@@ -56,6 +55,10 @@
         margin: 3px 0 0 7px;
         font-size: 13px;
         transition: all 0.5s ease;
+      }
+
+      @include respond-to(mobile) {
+        right: -16px;
       }
     }
 
