--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -1,5 +1,5 @@
 @import './variables/colors';
-@import './mixins/shadow';
+@import './variables/shadow';
 @import './mixins/media';
 
 .main {
@@ -11,7 +11,6 @@
 
     
     .search-bar {
-      @include input-shadow();
       @include respond-to(mobile) {
         width: 100%;
       }
@@ -21,6 +20,7 @@
       width: 40%;
       margin: 0 auto;
       border-radius: 20px;
+      box-shadow: $input-shadow;
       transition: all 0.3s ease;
 
       input {
@@ -72,7 +72,6 @@
     }
 
     .option-list {
-      @include card-normal-shadow();
       min-width: 131px;
       visibility: hidden;
       position: absolute;
@@ -81,6 +80,8 @@
       top: 65px;
       background-color: $container-bg;
       border-radius: 10px;
+      box-shadow: $card-normal-shadow;
+
 
       .option {
         label {
@@ -92,10 +93,10 @@
         }
 
         input[type="checkbox"]:checked ~ label, &:hover{
-          @include sm-box-shadow();
           border: 1px solid $dragon-label;
           background-color: #64b4c8;
           color: white;
+          box-shadow: $sm-box-shadow;
         }
       }    
     }
@@ -114,12 +115,13 @@
       }
 
       .filter-icon-label {
-        @include btn-hover-shadow();
         display: inline-block;
         border-radius: 10px;
         padding: 6px 20px;
         color: $pink;
         border: 1px solid $gray-border;
+        box-shadow: $btn-shadow;
+
         cursor: pointer;
   
         .filter-arrow {
@@ -146,26 +148,6 @@
     }
   }
 
-  .filter-condition-list {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px 20px;
-
-    span {
-      @include sm-box-shadow();
-      padding: 2px 10px;
-      margin: 12px 5px 0 0;
-      border-radius: 10px;
-      border: 1px solid $dragon-label;
-      font-size: 14px;
-      color: $strong-inset-shadow;
-      cursor: default;
-
-      &:nth-last-child(1) {
-        margin: 12px 0 0;
-      }
-    }
-  }
 
   .no-result {
     text-align: center;
@@ -180,19 +162,18 @@
     border-radius: 5px;
 
     li {
-      @include card-normal-shadow();
-
       padding: 20px 47px;
       margin: 20px 10px;
       text-align: center;
-      cursor: pointer;
       border: 1px solid #fff;
       background-color: $container-bg;
       border-radius: 10px;
+      box-shadow: $card-normal-shadow;
       transition: all 0.3s ease;
+      cursor: pointer;
       
       &:hover {
-        @include card-inner-shadow();
+        box-shadow: $card-inner-shadow;
       }
     }
   }
@@ -202,13 +183,13 @@
     width: 100%;
 
     p {
-      @include card-normal-shadow();
       width: 50%;
       margin: 20px auto;
       padding: 20px;
       font-size: 20px;
       text-align: center;
       background-color: $container-bg;
+      box-shadow: $card-normal-shadow;
     }
   }
 }
