--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -29,7 +29,7 @@ $orange: #ff8800;
 $yellow: #ebeb32;
 $blue: #0070f3;
 $pink: #eb3264;
-
+$icon-color: #525050;
 
 // shadow
 $shade-shadow: #0000001a;
